--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
-remote_theme: 'mmistakes/minimal-mistakes@4.19.3'
+remote_theme: "mmistakes/minimal-mistakes@4.19.3"
 plugins:
   - jekyll-include-cache
+
+locale: "en-GB"
+title: "Edward Xu"
+title_separator: "|"
+url: "https://edwardx.com"
