--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,9 @@ locale: "en-GB"
 title: "Edward Xu"
 title_separator: "|"
 url: "https://edwardx.com"
+logo: ""
+author:
+  name: "Edward Xu"
+  avatar: "/assets/images/me.jpeg"
+  bio: "Programming, Climbing"
+  location: "Melb, AUS"
