--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,6 @@ url: "https://edwardx.com"
 logo: ""
 author:
   name: "Edward Xu"
-  avatar: "/assets/images/me.jpeg"
+  avatar: "/assets/images/me.jpg"
   bio: "Programming, Climbing"
   location: "Melb, AUS"
