undo delete _site

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author:
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://edwardx/com"
+      url: "https://edwardx.com"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/edwaarrdd"
