--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ masthead_title: "Eddy's Site"
 author:
   name: "Edward Xu"
   avatar: "/assets/images/me.jpg"
-  bio: "Life is a marathon, not a race"
+  bio: "Life is a marathon, not a sprint"
   location: "Melbourne, AUS"
   links:
     - label: "Website"
